--- a/app/app.html
+++ b/app/app.html
@@ -2,29 +2,43 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Hospital Call Center - Data Cleaning Tools</title>
+  <title>Call Center - Data Cleaning Tools</title>
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap4/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="stylesheets/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
   <div class="container">
-    <h3 class='text-warning'>Hospital Call Center - Data Cleaning Tools</h3>
+    <h3 class='text-warning'>Call Center - Data Cleaning Tools</h3>
     <div class='row'>
       <div class="col-md-12">
         <form class='form' novalidate="">
           <div class='form-group'>
-            <label class='text-success' for='inputFile'>Input File (.zip only)</label>
-            <input name='inputFile' type='file' class='form-control-file' id='inputFile' accept='.zip' />
+            <label style='display: block;' class='text-success' for='inputFile'>Input File (.zip file only)</label>
+            <button type='button' id='inputFile' class='btn-sm btn btn-info'>Select File</button>
+            <!-- <input name='inputFile' type='file' class='form-control-file' id='inputFile' accept='.zip' /> -->
+            <span id='inputFileLabel'></span>
           </div>
           <div class='form-group'>
             <label style='display: block;' class='text-success' for='outputDirectory'>Output Directory</label>
-            <input id='outputDirectory' name='outputDirectory' type='file' webkitdirectory directory required class='form-control-file' style='display: none;' />
-            <button type='button' id='selectDirectory' class='btn-directory btn btn-info'>Select a Directory</button>
-            <span id='directoryLabel'></span>
+            <!-- <input id='outputDirectory' name='outputDirectory' type='file' webkitdirectory directory required class='form-control-file' style='display: none;' /> -->
+            <button type='button' id='outputDirectory' class='btn-sm btn btn-info'>Select a Directory</button>
+            <span id='outputDirectoryLabel'></span>
           </div>
           <div class='form-group'>
-            <button type='button' class='btn btn-success' id='btnProcess'>Process!</button>
+            <button type='button' class='btn btn-success' id='btnProcess'>
+              <i class='fa fa-rocket'></i>
+              <span style='margin-left: 5px;'>Process</span>
+            </button>
+          </div>
+          <div id='spinner' style='text-align: center; display: none;'>
+            <i class="text-danger fa fa-circle-o-notch fa-spin fa-2x fa-fw"></i>
+            <span class="sr-only">Loading...</span>
+          </div>
+          <div id='succeedBox' style='display: none;' class='alert alert-success'>
+          </div>
+          <div id='failedBox' style='display: none;' class='alert alert-danger'>
           </div>
         </form>
       </div>
