--- a/app/app.html
+++ b/app/app.html
@@ -10,6 +10,9 @@
 <body>
 
   <div class="container">
+    <div class="col-md-12" style='text-align: center; margin-bottom: 10px;'>
+      <img src='vendor/logo.png' alt='Intage Vietnam' />
+    </div>
     <h3 class='text-warning'>Call Center - Data Cleaning Tools</h3>
     <div class='row'>
       <div class="col-md-12">
