--- a/app/app.html
+++ b/app/app.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class="container">
+  <div class="container" style='max-width: 800px; min-width: 400px;'>
     <div class="col-md-12" style='text-align: center; margin-bottom: 10px;'>
       <img src='vendor/logo.png' alt='Intage Vietnam' />
     </div>
@@ -32,7 +32,7 @@
           <div class='form-group'>
             <button type='button' class='btn btn-success' id='btnProcess'>
               <i class='fa fa-rocket'></i>
-              <span style='margin-left: 5px;'>Process</span>
+              <span style='margin-left: 5px;'>Import & Process Data</span>
             </button>
           </div>
           <div id='spinner' style='text-align: center; display: none;'>
@@ -47,9 +47,8 @@
       </div>
     </div>
   </div>
-  <script src="app.js"></script>
   <script type="javascript" src="vendor/jquery/jquery-3.2.1.min.js"></script>
   <script type="javascript" src="vendor/bootstrap4/js/bootstrap.min.js"></script>
-
+  <script src="app.js"></script>
 </body>
 </html>
