Checking Data before Process & Write Checking Result to Excel File

--- a/app/app.html
+++ b/app/app.html
@@ -30,7 +30,12 @@
             <span id='outputDirectoryLabel'></span>
           </div>
           <div class='form-group'>
-            <button type='button' class='btn btn-success' id='btnProcess'>
+            <button type='button' class='btn btn-success' id='btnCheck'>
+              <i class='fa fa-check-circle'></i>
+              <span style='margin-left: 5px;'>Checking Data before Import</span>
+            </button>
+
+            <button type='button' class='btn btn-primary' id='btnProcess'>
               <i class='fa fa-rocket'></i>
               <span style='margin-left: 5px;'>Import & Process Data</span>
             </button>
