--- a/app/app.html
+++ b/app/app.html
@@ -16,28 +16,41 @@
     <h3 class='text-warning'>Call Center - Data Cleaning Tools</h3>
     <div class='row'>
       <div class="col-md-12">
-        <form class='form' novalidate="">
-          <div class='form-group'>
-            <label style='display: block;' class='text-success' for='inputFile'>Input File (.zip file only)</label>
-            <button type='button' id='inputFile' class='btn-sm btn btn-info'>Select File</button>
-            <!-- <input name='inputFile' type='file' class='form-control-file' id='inputFile' accept='.zip' /> -->
-            <span id='inputFileLabel'></span>
+        <form class='form' class='form-horizontal' novalidate="">
+          <div class='form-group row'>
+            <label class='control-label col-sm-4 text-success' for='inputFile'>Input File (.zip file only)</label>
+            <div class='col-sm-8'>
+              <button type='button' id='inputFile' class='btn-sm btn btn-info'>Select File</button>
+              <span id='inputFileLabel'></span>
+            </div>
+          </div>
+          <div class='form-group row'>
+            <label class='control-label col-sm-4 text-success' for='outputDirectory'>Output Directory</label>
+            <div class='col-sm-8'>
+              <button type='button' id='outputDirectory' class='btn-sm btn btn-info'>Select a Directory</button>
+              <span id='outputDirectoryLabel'></span>
+            </div>
+          </div>
+          <div class='form-group row'>
+            <label class='text-success control-label col-sm-4' for='txtBatch'>Batch</label>
+            <div class='col-sm-8'>
+              <input type='text' class='form-control' id='txtBatch' name='txtBatch'/>
+            </div>
           </div>
           <div class='form-group'>
-            <label style='display: block;' class='text-success' for='outputDirectory'>Output Directory</label>
-            <!-- <input id='outputDirectory' name='outputDirectory' type='file' webkitdirectory directory required class='form-control-file' style='display: none;' /> -->
-            <button type='button' id='outputDirectory' class='btn-sm btn btn-info'>Select a Directory</button>
-            <span id='outputDirectoryLabel'></span>
-          </div>
-          <div class='form-group'>
-            <button type='button' class='btn btn-success' id='btnCheck'>
+            <button style='margin-bottom: 10px;' type='button' class='btn btn-success' id='btnCheck'>
               <i class='fa fa-check-circle'></i>
-              <span style='margin-left: 5px;'>Checking Data before Import</span>
+              <span style='margin-left: 5px;'>Checking Data</span>
             </button>
 
-            <button type='button' class='btn btn-primary' id='btnProcess'>
+            <button style='margin-bottom: 10px;' type='button' class='btn btn-danger' id='btnClearBatch'>
+              <i class='fa fa-close'></i>
+              <span style='margin-left: 5px;'>Clear Current Batch Data</span>
+            </button>
+
+            <button style='margin-bottom: 10px;' type='button' class='btn btn-primary' id='btnProcess'>
               <i class='fa fa-rocket'></i>
-              <span style='margin-left: 5px;'>Import & Process Data</span>
+              <span style='margin-left: 5px;'>Import Data</span>
             </button>
           </div>
           <div id='spinner' style='text-align: center; display: none;'>
