Implement Report-Related Columns in Customers Table

--- a/app/app.html
+++ b/app/app.html
@@ -45,12 +45,17 @@
 
             <button style='margin-bottom: 10px;' type='button' class='btn btn-danger' id='btnClearBatch'>
               <i class='fa fa-close'></i>
-              <span style='margin-left: 5px;'>Clear Current Batch Data</span>
+              <span style='margin-left: 5px;'>Clear Batch Data</span>
             </button>
 
             <button style='margin-bottom: 10px;' type='button' class='btn btn-primary' id='btnProcess'>
               <i class='fa fa-rocket'></i>
               <span style='margin-left: 5px;'>Import Data</span>
+            </button>
+
+            <button style='margin-bottom: 10px;' type='button' class='btn btn-warning' id='btnReport'>
+              <i class='fa fa-suitcase'></i>
+              <span style='margin-left: 5px;'>Generate Report</span>
             </button>
           </div>
           <div id='spinner' style='text-align: center; display: none;'>
