--- a/app/app.html
+++ b/app/app.html
@@ -57,6 +57,11 @@
               <i class='fa fa-suitcase'></i>
               <span style='margin-left: 5px;'>Generate Report</span>
             </button>
+
+            <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullData'>
+              <i class='fa fa-trophy'></i>
+              <span style='margin-left: 5px;'>Export Full Data & Report</span>
+            </button>
           </div>
           <div id='spinner' style='text-align: center; display: none;'>
             <i class="text-danger fa fa-circle-o-notch fa-spin fa-2x fa-fw"></i>
