#32 - Done Export Full Data of Batch into a single file

--- a/app/app.html
+++ b/app/app.html
@@ -62,6 +62,11 @@
               <i class='fa fa-trophy'></i>
               <span style='margin-left: 5px;'>Export Full Data & Report</span>
             </button>
+
+            <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullBatchData'>
+              <i class='fa fa-superpowers'></i>
+              <span style='margin-left: 5px;'>Export Full Batch Data</span>
+            </button>
           </div>
           <div id='spinner' style='text-align: center; display: none;'>
             <i class="text-danger fa fa-circle-o-notch fa-spin fa-2x fa-fw"></i>
