--- a/app/app.html
+++ b/app/app.html
@@ -63,6 +63,11 @@
               <span style='margin-left: 5px;'>Export Full Data & Report</span>
             </button>
 
+            <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullReport'>
+              <i class='fa fa-trophy'></i>
+              <span style='margin-left: 5px;'>Export Full Report</span>
+            </button>
+
             <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullBatchData'>
               <i class='fa fa-superpowers'></i>
               <span style='margin-left: 5px;'>Export Full Batch Data</span>
