Prepare for Hosca 3

--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Call Center - Data Cleaning Tools</title>
+  <title>Hosca 3 - Data Cleaning Tools</title>
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap4/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="stylesheets/main.css" rel="stylesheet" type="text/css">
@@ -13,7 +13,7 @@
     <div class="col-md-12" style='text-align: center; margin-bottom: 10px;'>
       <img src='vendor/logo.png' alt='Intage Vietnam' />
     </div>
-    <h3 class='text-warning'>Call Center - Data Cleaning Tools</h3>
+    <h3 class='text-warning'>Hosca 3 - Data Cleaning Tools</h3>
     <div class='row'>
       <div class="col-md-12">
         <form class='form' class='form-horizontal' novalidate="">
