--- a/app/help.html
+++ b/app/help.html
@@ -2,25 +2,18 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Call Center - Data Cleaning Tools</title>
+  <title>Hosca 3 - Data Cleaning Tools</title>
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap4/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="stylesheets/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div class="container" style='max-width: 800px; min-width: 400px;'>
-    <h3 class='text-success'>Tài liệu hướng dẫn sử dụng Data Cleaning Tools</h3>
+    <h3 class='text-success'>Tài liệu hướng dẫn sử dụng Hosca 3 - Data Cleaning Tools</h3>
     <div class="row">
       <div class="col-md-12">
+        <small>Phiên bản mới, phục vụ dự án <strong>Hosca 3</strong> - Cập nhật <strong>tháng 3/2019</strong></small>
         <p>- Sau khi cài đặt xong, trong lần đầu tiên sử dụng, cần phải thiết lập Database bằng cách vào <strong>Main Menu > Setup Database</strong>.</p>
-        <p>Bước 1 - Khai báo File Zip chứa dữ liệu cần lọc (input).</p>
-        <p>Bước 2 - Chọn nơi lưu kết quả (output).</p>
-        <p>Bước 3 - Khai báo Batch là ký hiệu để phân biệt giữa đợt import này với đợt import trước, ví dụ: Week 1, Week 2, W1, W2, ...</p>
-        <p>Bước 4 - Nhấn nút Check Data để kiểm tra sơ bộ Data, kết quả sẽ nằm trong File Excel, gồm các thông tin như các bệnh viện không tìm thấy trong Database, các File Excel quá lớn mà hệ thống không đọc được, các File Excel bị lỗi.</p>
-        <p>Fix các lỗi nếu có ở bước 4 rồi mới tiến hành Process Data. Nếu có tên bệnh viện mới, link nó với ID của bệnh viện tương ứng trong File Excel kết quả rồi tiến hành import matches vào hệ thống bằng cách truy cập menu <strong>Main Menu > Import Matches</strong></p>
-        <p>Nếu cần xóa Data của đợt Import khai báo ở bước 3 thì nhấn nút <strong>Clear Batch Data</strong></p>
-        <p>Bước 5 - Import Data</p>
-        <p>Bước 6 - Generate Report</p>
       </div>
     </div>
   </div>
