Complete Read & Import Customers

--- a/app/app.html
+++ b/app/app.html
@@ -57,47 +57,50 @@
           <div class='form-group'>
             <button style='margin-bottom: 10px;' type='button' class='btn btn-success' id='btnCheck'>
               <i class='fa fa-check-circle'></i>
-              <span style='margin-left: 5px;'>Checking Data</span>
+              <span style='margin-left: 5px;'>Kiểm tra Data</span>
             </button>
 
-            <!-- <button style='margin-bottom: 10px;' type='button' class='btn btn-danger' id='btnClearBatch'>
+            <button style='margin-bottom: 10px;' type='button' class='btn btn-danger' id='btnClearBatch'>
               <i class='fa fa-close'></i>
-              <span style='margin-left: 5px;'>Clear Batch Data</span>
-            </button> -->
+              <span style='margin-left: 5px;'>Xóa Data theo tuần</span>
+            </button>
 
-            <!-- <button style='margin-bottom: 10px;' type='button' class='btn btn-primary' id='btnProcess'>
+            <button style='margin-bottom: 10px;' type='button' class='btn btn-primary' id='btnProcess'>
               <i class='fa fa-rocket'></i>
               <span style='margin-left: 5px;'>Import Data</span>
             </button>
 
-            <button style='margin-bottom: 10px;' type='button' class='btn btn-warning' id='btnReport'>
+<!--             <button style='margin-bottom: 10px;' type='button' class='btn btn-warning' id='btnReport'>
               <i class='fa fa-suitcase'></i>
-              <span style='margin-left: 5px;'>Generate Report</span>
+              <span style='margin-left: 5px;'>Xuất Report</span>
             </button>
+ -->
 
-            <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullData'>
+<!--             <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullData'>
               <i class='fa fa-trophy'></i>
-              <span style='margin-left: 5px;'>Export Full Data & Report</span>
+              <span style='margin-left: 5px;'>Xuất Full Data & Report</span>
             </button>
+ -->
 
-            <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullReport'>
+<!--             <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullReport'>
               <i class='fa fa-trophy'></i>
-              <span style='margin-left: 5px;'>Export Full Report</span>
-            </button>
+              <span style='margin-left: 5px;'>Xuất Full Report</span>
+            </button> -->
 
-            <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullBatchData'>
+<!--             <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullBatchData'>
               <i class='fa fa-superpowers'></i>
-              <span style='margin-left: 5px;'>Export Full Batch Data</span>
+              <span style='margin-left: 5px;'>Xuất Full Data theo tuần</span>
             </button> -->
           </div>
+
           <div id='spinner' style='text-align: center; display: none;'>
             <i class="text-danger fa fa-circle-o-notch fa-spin fa-2x fa-fw"></i>
             <span class="sr-only">Loading...</span>
           </div>
-          <div id='succeedBox' style='display: none;' class='alert alert-success'>
-          </div>
-          <div id='failedBox' style='display: none;' class='alert alert-danger'>
-          </div>
+
+          <div id='succeedBox' style='display: none;' class='alert alert-success'></div>
+
+          <div id='failedBox' style='display: none;' class='alert alert-danger'></div>
         </form>
       </div>
     </div>
