Finish Generate Report

--- a/app/app.html
+++ b/app/app.html
@@ -70,11 +70,10 @@
               <span style='margin-left: 5px;'>Import Data</span>
             </button>
 
-<!--             <button style='margin-bottom: 10px;' type='button' class='btn btn-warning' id='btnReport'>
+            <button style='margin-bottom: 10px;' type='button' class='btn btn-warning' id='btnReport'>
               <i class='fa fa-suitcase'></i>
               <span style='margin-left: 5px;'>Xuất Report</span>
             </button>
- -->
 
 <!--             <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullData'>
               <i class='fa fa-trophy'></i>
