Added OTB-Chatbot Source

--- a/app/app.html
+++ b/app/app.html
@@ -44,6 +44,11 @@
                   <input type="radio" class="form-check-input" name="txtSource" value="OTB" style="margin-right: 10px;">OTB
                 </label>
               </div>
+              <div class="form-check-inline">
+                <label class="form-check-label">
+                  <input type="radio" class="form-check-input" name="txtSource" value="OTB-Chatbot" style="margin-right: 10px;">OTB Chatbot
+                </label>
+              </div>
             </div>
           </div>
 
