Setting up for New Project

--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Hosca 3 - Data Cleaning Tools</title>
+  <title>OTB Call Center - Data Cleaning Tools</title>
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap4/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="stylesheets/main.css" rel="stylesheet" type="text/css">
@@ -13,7 +13,7 @@
     <div class="col-md-12" style='text-align: center; margin-bottom: 10px;'>
       <img src='vendor/logo.png' alt='Intage Vietnam' />
     </div>
-    <h3 class='text-warning'>Hosca 3 - Data Cleaning Tools</h3>
+    <h3 class='text-warning'>OTB Call Center - Data Cleaning Tools</h3>
     <div class='row'>
       <div class="col-md-12">
         <form class='form' class='form-horizontal' novalidate="">
@@ -29,26 +29,6 @@
             <div class='col-sm-8'>
               <button type='button' id='outputDirectory' class='btn-sm btn btn-info'>Select a Directory</button>
               <span id='outputDirectoryLabel'></span>
-            </div>
-          </div>
-          <div class='form-group row'>
-            <label class='text-success control-label col-sm-4' for='txtSource'>Source</label>
-            <div class='col-sm-8'>
-              <div class="form-check-inline">
-                <label class="form-check-label">
-                  <input type="radio" class="form-check-input" name="txtSource" value="IMC" style="margin-right: 10px;">IMC
-                </label>
-              </div>
-              <div class="form-check-inline">
-                <label class="form-check-label">
-                  <input type="radio" class="form-check-input" name="txtSource" value="OTB" style="margin-right: 10px;">OTB
-                </label>
-              </div>
-              <div class="form-check-inline">
-                <label class="form-check-label">
-                  <input type="radio" class="form-check-input" name="txtSource" value="OTB-Chatbot" style="margin-right: 10px;">OTB Chatbot
-                </label>
-              </div>
             </div>
           </div>
 
@@ -79,22 +59,6 @@
               <i class='fa fa-suitcase'></i>
               <span style='margin-left: 5px;'>Xuất Report</span>
             </button>
-
-<!--             <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullData'>
-              <i class='fa fa-trophy'></i>
-              <span style='margin-left: 5px;'>Xuất Full Data & Report</span>
-            </button>
- -->
-
-<!--             <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullReport'>
-              <i class='fa fa-trophy'></i>
-              <span style='margin-left: 5px;'>Xuất Full Report</span>
-            </button> -->
-
-<!--             <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullBatchData'>
-              <i class='fa fa-superpowers'></i>
-              <span style='margin-left: 5px;'>Xuất Full Data theo tuần</span>
-            </button> -->
           </div>
 
           <div id='spinner' style='text-align: center; display: none;'>
