--- a/app/help.html
+++ b/app/help.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>OTB Call Center - Data Cleaning Tools</title>
+  <title>HUGGIES AB CALL CENTER 2020 - Data Cleaning Tools</title>
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap4/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="stylesheets/main.css" rel="stylesheet" type="text/css">
@@ -11,7 +11,7 @@
   <div class="container" style='max-width: 800px; min-width: 400px;'>
     <div class="row">
       <div class="col-md-12">
-        <small>Phiên bản mới, cập nhật <strong>tháng 11/2019</strong></small>
+        <small>Phiên bản mới, cập nhật <strong>tháng 10/2020</strong></small>
         <p>- Sau khi cài đặt xong, trong lần đầu tiên sử dụng, cần phải thiết lập Database bằng cách vào <strong>Main Menu > Setup Database</strong>.</p>
       </div>
     </div>
