2021-05-13 - OTB - LHTS (Lop Hoc Tien San)

--- a/app/app.html
+++ b/app/app.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class="container" style='max-width: 800px; min-width: 400px;'>
+  <div class="container" style='max-width: 800px; min-width: 500px;'>
     <div class="col-md-12" style='text-align: center; margin-bottom: 10px;'>
       <img src='vendor/logo.png' alt='Intage Vietnam' />
     </div>
@@ -44,9 +44,14 @@
                   <input type="radio" class="form-check-input" name="txtSource" value="OTB" style="margin-right: 10px;">OTB
                 </label>
               </div>
-              <div class="form-check-inline">
+              <!-- <div class="form-check-inline">
                 <label class="form-check-label">
                   <input type="radio" class="form-check-input" name="txtSource" value="OTB-Chatbot" style="margin-right: 10px;">OTB Chatbot
+                </label>
+              </div> -->
+              <div class="form-check-inline">
+                <label class="form-check-label">
+                  <input type="radio" class="form-check-input" name="txtSource" value="OTB-LHTS" style="margin-right: 10px;">OTB LHTS
                 </label>
               </div>
             </div>
