--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Hosca 3 (Update: 2022-04-20)</title>
+  <title>Hosca (Update: 2023-03-26)</title>
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap4/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="stylesheets/main.css" rel="stylesheet" type="text/css">
@@ -13,7 +13,7 @@
     <div class="col-md-12" style='text-align: center; margin-bottom: 10px;'>
       <img src='vendor/logo.png' alt='Intage Vietnam' />
     </div>
-    <h3 class='text-warning'>Hosca 3 - Data Cleaning Tools</h3>
+    <h3 class='text-warning'>Hosca - Data Cleaning Tools</h3>
     <div class='row'>
       <div class="col-md-12">
         <form class='form' class='form-horizontal' novalidate="">
@@ -64,6 +64,16 @@
             </div>
           </div>
 
+          <div class='form-group row'>
+            <label class='text-success control-label col-sm-4' for='txtMonthYear'>Xuất Data theo Tháng</label>
+            <div class='col-sm-6'>
+              <input type='text' class='form-control' id='txtMonthYear' name='txtMonthYear'/>
+            </div>
+            <div class='col-sm-2'>
+              Format: 1/2020, 3/2021, 10/2022, ...
+            </div>
+          </div>
+
           <div class='form-group'>
             <button style='margin-bottom: 10px;' type='button' class='btn btn-success' id='btnCheck'>
               <i class='fa fa-check-circle'></i>
@@ -83,6 +93,11 @@
             <button style='margin-bottom: 10px;' type='button' class='btn btn-warning' id='btnReport'>
               <i class='fa fa-suitcase'></i>
               <span style='margin-left: 5px;'>Xuất Report</span>
+            </button>
+
+            <button style='margin-bottom: 10px;' type='button' class='btn btn-danger' id='btnExportMonthlyData'>
+              <i class='fa fa-clock-o'></i>
+              <span style='margin-left: 5px;'>Xuất Data theo Tháng</span>
             </button>
 
 <!--             <button style='margin-bottom: 10px;' type='button' class='btn btn-info' id='btnFullData'>
