--- a/app/help.html
+++ b/app/help.html
@@ -1,21 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Hosca 3 - Data Cleaning Tools</title>
-  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="vendor/bootstrap4/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="stylesheets/main.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-  <div class="container" style='max-width: 800px; min-width: 400px;'>
-    <h3 class='text-success'>Tài liệu hướng dẫn sử dụng Hosca 3 - Data Cleaning Tools</h3>
-    <div class="row">
-      <div class="col-md-12">
-        <small>Phiên bản mới, phục vụ dự án <strong>Hosca 3</strong> - Cập nhật <strong>tháng 3/2019</strong></small>
-        <p>- Sau khi cài đặt xong, trong lần đầu tiên sử dụng, cần phải thiết lập Database bằng cách vào <strong>Main Menu > Setup Database</strong>.</p>
+  <head>
+    <meta charset="utf-8" />
+    <title>POME 2024 - Data Cleaning Tools</title>
+    <link
+      href="vendor/font-awesome/css/font-awesome.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="vendor/bootstrap4/css/bootstrap.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <div class="container" style="max-width: 800px; min-width: 400px">
+      <h3 class="text-success">
+        Tài liệu hướng dẫn sử dụng POME 2024 - Data Cleaning Tools
+      </h3>
+      <div class="row">
+        <div class="col-md-12">
+          <small
+            >Phiên bản mới, phục vụ dự án <strong>POME 2024</strong> - Cập nhật
+            <strong>tháng 1/2024</strong></small
+          >
+          <p>
+            - Sau khi cài đặt xong, trong lần đầu tiên sử dụng, cần phải thiết
+            lập Database bằng cách vào
+            <strong>Main Menu > Setup Database</strong>.
+          </p>
+        </div>
       </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
